// Vehicle Maintenance Tracking System (MTS) — RFP-012
// Source of the diagram in data_model.md.
// Edited at https://dbdiagram.io/d/6a78f2a8829f06bdc8b425db

Enum permission {
  view_vehicles
  view_team
  view_service_log
  view_reports
  manage_vehicles
  manage_team
  manage_schedules
  log_service
  edit_organization
}

Enum vehicle_status {
  active
  in_shop
  out_of_service
}

Enum service_type {
  preventive
  corrective
}

Table organizations {
  id integer [primary key]
  name varchar [not null]
  owner_name varchar [not null]
  address varchar [not null]
  phone varchar [not null]
  email varchar [not null]
  is_active boolean [not null, default: true]
  logo_key varchar
  accent_color varchar(7)
  deleted_at timestamp
  created_at timestamp [default: `now()`]

  Note: '''
  Each client brand with its own fleet. The MVP seeds one row and never creates more.

  owner_name, address, phone and email are the organization registry identity, not an
  app user: the director is who you call about the account, and they may never log in.
  A FK to users would also be circular, since users.organization_id is not null.

  is_active and deleted_at are different states. is_active = false is a suspension the
  organization comes back from; deleted_at is gone for good, with the rows kept so the
  service history stays readable. Both block sign-in.

  name is unique among the organizations that are not deleted. dbdiagram cannot express
  a partial index, so in Postgres this is:
    CREATE UNIQUE INDEX ON organizations (name) WHERE deleted_at IS NULL;

  email is not unique: it is a contact address. The login namespace is users.email.

  logo_key and accent_color are how a client sees themselves in the product. Both
  null means the brand manual, which is what everybody starts with. Only these two:
  the status hues mean overdue, due soon and on track, so they are not a client's to
  change and are not stored per organization.
  '''
}

Table platform_admins {
  id integer [primary key]
  full_name varchar [not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  created_at timestamp [default: `now()`]

  Note: '''
  Whoever runs the service, not a member of any fleet. Separate from users
  on purpose: users.organization_id is not null, and that is the rule that
  stops a query escaping from one client into another. An admin belongs to
  no organization, so putting them in users would mean dropping that rule
  for every row to accommodate a handful.

  There is no organization_id here and there never should be.
  '''
}

Table roles {
  id integer [primary key]
  organization_id integer [not null]
  name varchar [not null]
  created_at timestamp [default: `now()`]

  Indexes { (organization_id, name) [unique] }
  Note: '''
  A job title one client invented. This was an enum on users, which is why every
  organization had the same three and none could add a fourth.

  Each organization is seeded with a fleet coordinator, a mechanic and an operations
  manager, and owns them from then on: it renames them, changes what they grant, or
  adds others. "Mechanic" at one client and at another are separate rows that may
  mean different things.

  A role somebody holds cannot be deleted, and the last role granting manage_team
  cannot drop it: that is what stops a client locking itself out of its own team.
  '''
}

Table role_permissions {
  role_id integer [not null]
  permission permission [not null]

  Indexes { (role_id, permission) [pk] }
  Note: '''
  One permission a role grants. A row rather than an array column on roles, so the
  table stays in first normal form and the diagram shows the relationship instead of
  hiding it inside a value. The key is the pair, which stops the same grant twice.

  The list of permissions is developer-owned: a client composes roles out of it but
  cannot invent an entry, because every entry is a guard or a route that has to exist
  in code.
  '''
}

Table users {
  id integer [primary key]
  organization_id integer [not null]
  full_name varchar [not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  role_id integer [not null]
  created_at timestamp [default: `now()`]

  Note: 'email stays globally unique: it is the login identifier and the sign-in screen does not ask for an organization.'
}

Table vehicle_models {
  id integer [primary key]
  make varchar [not null]
  name varchar [not null]

  Indexes { (make, name) [unique] }
  Note: 'No organization_id. "Chevrolet NHR" is reference data nobody owns or edits, so a copy per organization would duplicate rows for nothing.'
}

Table vehicles {
  id integer [primary key]
  organization_id integer [not null]
  plate varchar [not null]
  model_id integer [not null]
  year integer
  odometer_km integer [not null, default: 0]
  status vehicle_status [not null, default: 'active']
  photo_key varchar
  created_at timestamp [default: `now()`]

  Indexes { (organization_id, plate) [unique] }
  Note: '''
  The plate was globally unique. Two client brands could not both own ABC123, so it
  becomes unique per organization.

  photo_key points at the picture in the object store, never the picture itself, the
  same shape service_event_photos uses. Null until somebody edits the vehicle to add
  one: registering a van and choosing a file are different kinds of work.
  '''
}

Table maintenance_tasks {
  id integer [primary key]
  organization_id integer [not null]
  name varchar [not null]

  Indexes { (organization_id, name) [unique] }
  Note: 'Per organization, not shared: the coordinator edits this list, so one client renaming a task would change another client schedules.'
}

Table maintenance_schedules {
  id integer [primary key]
  organization_id integer [not null]
  vehicle_id integer [not null]
  task_id integer [not null]
  interval_days integer
  interval_km integer
  next_due_date date
  next_due_km integer
  created_at timestamp [default: `now()`]

  Note: 'At least one interval must be set.'
}

Table service_events {
  id integer [primary key]
  organization_id integer [not null]
  vehicle_id integer [not null]
  schedule_id integer [note: 'Null when the work was not planned, e.g. a breakdown']
  task_id integer [not null]
  recorded_by integer [not null]
  type service_type [not null]
  performed_at date [not null]
  odometer_km integer
  notes text
  created_at timestamp [default: `now()`]
}

Table service_event_photos {
  id integer [primary key]
  organization_id integer [not null]
  service_event_id integer [not null]
  storage_key varchar [not null, unique]
  uploaded_by integer [not null]
  created_at timestamp [default: `now()`]

  Indexes { service_event_id }
  Note: 'Metadata only. The file itself lives in the object store and storage_key points at it.'
}

Table vehicle_photos {
  id integer [primary key]
  organization_id integer [not null]
  vehicle_id integer [not null]
  storage_key varchar [not null, unique]
  position integer [not null, default: 0]
  uploaded_by integer [not null]
  created_at timestamp [default: `now()`]

  Indexes { vehicle_id }
  Note: '''
    The rest of the van. The main picture stays on vehicles.photo_key so
    the fleet list can draw a thumbnail without a join, and these are
    everything else: the sides, the inside of the box, the damage.

    position, which service_event_photos has no use for: a gallery has an
    order and whoever took the photos will want to decide it.
  '''
}

// Every relationship is named, so the diagram says what the line means
// and the label lives in the source instead of being drawn by hand.

Ref employs:   users.organization_id > organizations.id
Ref sets_up:   roles.organization_id > organizations.id
Ref owns:      vehicles.organization_id > organizations.id
Ref defines:   maintenance_tasks.organization_id > organizations.id
Ref plans:     maintenance_schedules.organization_id > organizations.id
Ref logs:      service_events.organization_id > organizations.id
Ref stores:    service_event_photos.organization_id > organizations.id
Ref keeps:     vehicle_photos.organization_id > organizations.id

Ref grants:          role_permissions.role_id > roles.id
Ref is_assigned:     users.role_id > roles.id

Ref classifies:      vehicles.model_id > vehicle_models.id
Ref is_scheduled_for: maintenance_schedules.vehicle_id > vehicles.id
Ref repeats:         maintenance_schedules.task_id > maintenance_tasks.id
Ref services:        service_events.vehicle_id > vehicles.id
Ref fulfills:        service_events.schedule_id > maintenance_schedules.id
Ref performs:        service_events.task_id > maintenance_tasks.id
Ref records:         service_events.recorded_by > users.id
Ref documents:       service_event_photos.service_event_id > service_events.id
Ref uploads:         service_event_photos.uploaded_by > users.id
Ref illustrates:     vehicle_photos.vehicle_id > vehicles.id
Ref contributes:     vehicle_photos.uploaded_by > users.id
